# fmu-steaclient

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: publish_to_pypi.yml  style.yml  testing.yml
ci/: testkomodo.sh
src/stea/: __init__.py  calculate.py  make_request.py  stea_client.py  stea_config.py  stea_input.py  stea_keys.py  stea_project.py  stea_request.py  stea_result.py
src/stea/fm_stea/: STEA_CONFIG  fm_stea.py
stea/: __init__.py  stea_client.py  stea_config.py  stea_input.py  stea_keys.py  stea_project.py  stea_request.py  stea_result.py
stea/fm_stea/: fm_stea.py
tests/: __init__.py  conftest.py  stea_input.yml  test_cli.py  test_config.py  test_ert_plugin.py  test_hook_implementations.py  test_integration.py  test_stea.py
