[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fmu-steaclient"
authors = [
  {name = "Equinor ASA", email = "fg_sib-scout@equinor.com"},
]
description="stea - calculate economic analysis"
requires-python = ">=3.10"
readme = "README.md"
classifiers=[
        "Development Status :: 1 - Planning",
        "Environment :: Plugins",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
        "Natural Language :: English",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Topic :: Scientific/Engineering",
        "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]
dependencies=["requests", "pyyaml", "pydantic>=2", "resdata", "click", "importlib_resources"]

[project.urls]
repository = "https://github.com/equinor/fmu-steaclient"

[project.entry-points.ert]
stea_step = "stea.fm_stea.fm_stea"

[project.entry-points."console_scripts"]
fmu_steaclient = "stea.fm_stea.fm_stea:main_entry_point"

[tool.setuptools_scm]
write_to = "src/stea/version.py"

[tool.setuptools]
package-dir = {"" = "src"}

[project.optional-dependencies]
ert = ["ert"]
test = [
"fmu-steaclient[ert]",
"pre-commit",
"pytest",
"pytest-mock",
"pytest-httpserver",
"ruff",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  "B",   # flake-8-bugbear
  "C4",  # flake8-comprehensions
  "F",   # pyflakes
  "I",   # isort
  "NPY", # numpy specific rules
  "PL",  # pylint
  "SIM", # flake-8-simplify
  "UP",  # pyupgrade
  "W",   # pycodestyle
]

[tool.ruff.lint.pylint]
max-args = 7
