[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fmu-steaclient"
authors = [
  {name = "Equinor ASA", email = "fg_sib-scout@equinor.com"},
]
description="stea - calculate economic analysis"
requires-python = ">=3.11"
readme = "README.md"
classifiers=[
        "Development Status :: 1 - Planning",
        "Environment :: Plugins",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
        "Natural Language :: English",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Topic :: Scientific/Engineering",
        "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]
dependencies=["requests", "pyyaml", "pydantic>=2", "resdata", "click", "importlib_resources"]

[project.urls]
repository = "https://github.com/equinor/fmu-steaclient"

[project.entry-points.ert]
stea_step = "stea.fm_stea.fm_stea"

[project.entry-points."console_scripts"]
fmu_steaclient = "stea.fm_stea.fm_stea:main_entry_point"

[tool.setuptools_scm]
write_to = "src/stea/version.py"

[tool.setuptools]
package-dir = {"" = "src"}

[project.optional-dependencies]
ert = ["ert"]
test = [
"fmu-steaclient[ert]",
"pre-commit",
"pytest",
"pytest-mock",
"pytest-httpserver",
"ruff",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  "A",
  "AIR",
  "ARG",
  "ASYNC",
  "B",   # flake-8-bugbear
  "BLE",
  "C4",  # flake8-comprehensions
  "DJ",
  "E",
  "EM",  # flake8-errmsg
  "ERA",
  "EXE",
  "F",   # pyflakes
  "FA",
  "FAST",
  "FBT",
  "FIX",
  "FLY",
  "G",
  "I",   # isort
  "ICN",
  "INP",
  "INT",
  "ISC",
  "LOG",
  "NPY", # numpy specific rules
  "PD",
  "PERF",
  "PGH",
  "PIE",
  "PL",  # pylint
  "PLC",
  "PLE",
  "PT",  # pytest
  "PYI",
  "Q",
  "RSE",
  "SIM", # flake-8-simplify
  "SLF",
  "SLOT",
  "T",
  "TC",  # flake-8-typechecking
  "TD",
  "TID",
  "TRY",
  "UP",  # pyupgrade
  "W",   # pycodestyle
  "YTT"
]

[tool.ruff.lint.pylint]
max-args = 7
